1276/kian.coffee/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kian-coffee
  namespace: kian-coffee
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dev.kian.coffee
spec:
  selector:
    app: kian-coffee
  ports:
  - name: http
    targetPort: 80
    port: 80
