1276/kian.coffee/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kian-coffee
  namespace: kian-coffee
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dev.kian.coffee`)
      kind: Rule
      services:
        - name: kian-coffee
          port: 80
#      middlewares:
#        - name: default-headers
  tls:
    secretName: dev-kian-coffee-tls
